docs/style.css
/* layout */

body {
  background: url(wd.svg) no-repeat fixed;
  color: #000044;
  font-family: sans-serif;
}

header {
  margin: 40px 10px;
}

header img {
  height: 75px;
}

header img+img {
  float: right;
}

footer {
  margin: 40px auto;
  text-align: center;
  padding-top: 40px;
  border-top: 2px solid #ccc;
  font-size: 9pt;
}

article {
  margin: 10px;
}

#container {
  margin: 10px 10px 10px 70px;
}


/* form */

form {
  text-align: center;
}

textarea {
  width: 100%;
  height: 10em;
}


/* inline */

dt {
  font-weight: bold;
}

p>code {
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(0, 0, 0, 0.04);
  border-radius: 3px;
}


/* table */

table {
  width: 100%;
  margin: 2em auto;
  background-color: #f9f9f9;
  border: 1px #aaa solid;
  border-collapse: collapse;
  color: black;
}

th {
  background-color: #f2f2f2;
  text-align: center;
  border: 1px #aaa solid;
  padding: 0.2em;
}

td {
  border: 1px #aaa solid;
  padding: 0.2em;
}


/* image */

figcaption, caption {
  font-weight: bold;
}

figure.fig {
  margin: 2em auto;
  text-align: center;
}

figure img {
  display: block;
  max-width: 100%;
}

figure.fig>div {
  display: block;
  width: 400px;
  height: 300px;
  background: #eee;
  border: 1px dotted brown;
  margin: 0 auto;
  padding: 5px;
  text-align: left;
}


/* code */

figure.lst {
  margin: 2em auto;
  padding: .5em;
  border-left: #7dccf3 solid 0.5em;
  background: #e7eff3;
}

figure.lst figcaption {
  color: #00a3f3;
}

pre {
  margin-left: 2em;
  white-space: pre-wrap;
}

h1 {
  color: #00B5EC;
  margin-top: 2em;
}

p.note {
  border-left: #e0cb52 solid 0.5em;
  background: #fcfaee;
  padding: 1em 1.2em 0.5em;
  margin: 1em 0;
  position: relative;
  clear: both;
}

p.note:before {
  content: 'ノート';
  color: #b9ab2d;
  display: block;
  margin: -0.5em 0 0.5em -0.8em;
  font-weight: bold;
}


/* toc */

ul.toc {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li.level2 {
  margin-left: 2em;
}

li.level3 {
  margin-left: 4em;
}

li.level4 {
  margin-left: 6em;
}

